--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.2.0",
   "author": "Hudi",
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^4.4.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.11.0",
@@ -22,13 +23,15 @@
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-highlight-code": "^3.3.0",
     "gatsby-remark-images": "^7.11.0",
     "gatsby-remark-katex": "^3.5.0",
     "gatsby-remark-prismjs": "^7.11.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-static-images": "^1.2.1",
     "gatsby-source-filesystem": "^5.11.0",
-    "gatsby-transformer-remark": "^2.10.0",
+    "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^5.11.0",
     "katex": "^0.12.0",
     "lodash": "^4.17.21",
